examples/calico/allow-ingress-egress-haproxy.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-ingress-egress-haproxy
  namespace: namespace1
spec:
  selector: all()
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - '80'
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - '80'
