examples/calico/allow-ingress-port-80-demo-ns.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-ingress-port-80-demo-ns
  namespace: demo
spec:
  selector: all()
  ingress:
  - action: Allow
    # source:
    #   namespaceSelector: "testlabel == 'test'"
    protocol: TCP
    destination:
      ports:
      - '80'
  egress:
  - action: Allow
  types:
  - Ingress
  - Egress
